        implicitely by Rostream.h before
        * include/Rcpp/macros/debug.h : factor out the debugging macros
        * include/Rcpp/api/meat/RObject.h : only declare templates that use
        as and wrap. they are implemented later in the meat directory
        * include/Rcpp/api/meat/meat.h: directory containing implementations
        of templates using as and wrap
        
2012-12-05  JJ Allaire <jj@rstudio.org>

        * src/Attributes.R: direct hookup of external ptr in sourceCpp
        * src/Attributes.cpp: use code generation for compileAttributes;
        direct hookup of external ptr in sourceCpp
        * src/AttributesGen.cpp: use code generation for compileAttributes;
        direct hookup of external ptr in sourceCpp
        * src/AttributesGen.h: use code generation for compileAttributes;
        direct hookup of external ptr in sourceCpp
        * src/Module.cpp: fix typo in GetCppCallable
        * include/Rcpp/iostream/Rstreambuf.h: add cstdio include
        * DESCRIPTION: bump version to 0.10.1.4

2012-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/hash/hash.h: Added include inttypes.h for intptr_t

2012-12-04  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use simple code generation for sourceCpp
        * src/Attributes.cpp: move generators into their own source file;
        use simple code generation for sourceCpp
        * src/AttributesGen.cpp: move generators into their own source file;
        add C++ default argument parsing
        * src/AttributesGen.h: move generators into their own source file
        * src/AttributesParser.cpp: move generators into their own source file
        * src/AttributesParser.h: move generators into their own source file
        * src/AttributesTypes.h: new header for attributes types
        * src/AttributesUtil.h: new header for attributes utilities

2012-12-04 Romain Francois <romain@r-enthusiasts.com>
