@@ -12,6 +12,8 @@
         as and wrap. they are implemented later in the meat directory
         * include/Rcpp/api/meat/meat.h: directory containing implementations
         of templates using as and wrap
+        * include/RcppCommon.h: removed unused test_named
+        * src/RcppCommon.cpp: removed unused test_named
         
 2012-12-05  JJ Allaire <jj@rstudio.org>
 
